# jmr

./: .gitmodules  .vimrc  CMakeLists.txt  README.md  run_test_app.sh  run_web_client.sh
core/: CMakeLists.txt  module.py
core/client/: client.py  client_session.py
core/fs/: __init__.py  directory.py  table.py
core/operation/: __init__.py  map_operation.py  map_reduce_operation.py
core/storage/: memory_storage.py
core/tables/: __init__.py  row.py  row_reader.py  row_writer.py
interfaces/: CMakeLists.txt  IClient.idl
interfaces/fs/: IFsClient.idl  INode.idl
interfaces/io/: IRow.idl  IRowReader.idl  IRowWriter.idl
interfaces/operations/: IOperation.idl  Operations.idl
test_app/: CMakeLists.txt  main.cpp  util.hpp
web_client/: CMakeLists.txt  fake_db_activity.py  web_client.py
web_client/templates/: base.html  index.html  navigation-table.html  navigation.html  operations.html  version.html
